--- a/public/style.css
+++ b/public/style.css
@@ -298,3 +298,57 @@ a{
     text-align: center; 
     cursor: pointer;
 }
+.modal{
+    position: absolute;
+    top: 0;
+    background-color: rgba(0,0,0,0.8);
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
+}
+.modal .modalContent{
+    width: 20%;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 2px 2px 1px;
+    margin-top: 200px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    text-align: center;
+
+}
+.modalContent .text{
+    font-size: 25px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.modalContent .buttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.buttons #delete{
+    background-color: #F15A59;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+
+}
+
+.buttons #cancel{
+    background-color: #A8A196;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.modalHidden{
+    visibility:hidden;
+}
